Import of TEODOR/Net-Cassandra-Easy-0.03 from CPAN.
gitpan-cpan-distribution: Net-Cassandra-Easy
gitpan-cpan-version:      0.03
gitpan-cpan-path:         TEODOR/Net-Cassandra-Easy-0.03.tar.gz
gitpan-cpan-author:       TEODOR
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 Revision history for Perl module Net::Cassandra::Easy:
 
+0.03 Mon Mar 15 00::00:00 GMT 2010
+    - doc fixes
+
 0.02 Fri Mar 12 00::00:00 GMT 2010
     - inital release
