--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@ Revision history for Perl module Net::Cassandra::Easy:
 
 TODO    - cassidy.pl: do standard families, handle commas and spaces, accumulate return lists over 100 items, docs
 
+0.10 Fri Apr 09 01::00:00 GMT 2010
+    - fix timestamps so they are 0-padded on the microseconds
+
 0.09 Tue Apr 06 01::00:00 GMT 2010
     - support deletions in non-super CFs
 
