Import of TEODOR/Net-Cassandra-Easy-0.12 from CPAN.
gitpan-cpan-distribution: Net-Cassandra-Easy
gitpan-cpan-version:      0.12
gitpan-cpan-path:         TEODOR/Net-Cassandra-Easy-0.12.tar.gz
gitpan-cpan-author:       TEODOR
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@ Revision history for Perl module Net::Cassandra::Easy:
 
 TODO    - cassidy.pl: do standard families, handle commas and spaces, accumulate return lists over 100 items, docs
 
+0.12 Thu Apr 15 01::00:00 GMT 2010
+    - cassidy.pl can add/rename/delete keyspaces and column families
+
 0.11 Mon Apr 12 01::00:00 GMT 2010
     - genthrift.pl will fetch and use the latest cassandra.thrift
     - new configure() method to add/rename/delete keyspaces and column families
