--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,12 @@ Revision history for Perl module Net::Cassandra::Easy:
 
 TODO    - cassidy.pl: do standard families, handle commas and spaces, accumulate return lists over 100 items, docs
 
+0.14 Thu Apr 15 01::00:00 GMT 2010
+    - catch up with new Thrift interface (no keyspace arguments anymore)
+
+0.13 Thu Apr 15 01::00:00 GMT 2010
+    - unreleased due to bugs
+
 0.12 Thu Apr 15 01::00:00 GMT 2010
     - cassidy.pl can add/rename/delete keyspaces and column families
 
